--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "check-ts-expect",
+  "repo": "https://github.com/typeholes/check-ts-expect.git",
+  "author": "TypeHoles",
+  "license": "MIT",
   "version": "0.0.1",
   "description": "Verify ts-expect-error or casts against the a regex on the error message",
   "main": "checkExpect.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "ts-morph": "^20.0.0",
     "yargs": "^17.7.2"
